# src/api/v1/seasons/application/usecases/FindSeasonByIdUseCase.ts
@@ -1,10 +1,11 @@
+import { IncludeType } from "@/types/common";
 import { Season } from "../../domain/Season";
 import { SeasonsRepositoryPort } from "../ports/SeasonsRepositoryPort";
 
 export class FindSeasonByIdUseCase {
   constructor(private seasonRepo: SeasonsRepositoryPort) {}
 
-  async execute(id: string): Promise<Season | null> {
-    return this.seasonRepo.findById(id);
+  async execute(id: string, include?: IncludeType): Promise<Season | null> {
+    return this.seasonRepo.findById(id, include);
   }
 }
