# swagger.json
@@ -2285,6 +2285,14 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"IncludeType": {
+				"type": "string",
+				"enum": [
+					"none",
+					"few",
+					"all"
+				]
+			},
 			"SeasonResponse": {
 				"properties": {
 					"status": {
@@ -3478,6 +3486,42 @@
 					{
 						"in": "path",
 						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/videos/by-episode/{episodeId}": {
+			"get": {
+				"operationId": "GetByEpisodeId",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/VideoResponse"
+								}
+							}
+						}
+					}
+				},
+				"description": "Get video by episode ID",
+				"tags": [
+					"Videos"
+				],
+				"security": [
+					{
+						"cookieAuth": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "episodeId",
 						"required": true,
 						"schema": {
 							"type": "string"
@@ -4823,6 +4867,14 @@
 						"schema": {
 							"type": "string"
 						}
+					},
+					{
+						"in": "query",
+						"name": "include",
+						"required": false,
+						"schema": {
+							"$ref": "#/components/schemas/IncludeType"
+						}
 					}
 				]
 			}
@@ -5048,6 +5100,14 @@
 						"required": true,
 						"schema": {
 							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "include",
+						"required": false,
+						"schema": {
+							"$ref": "#/components/schemas/IncludeType"
 						}
 					}
 				]
